slight styling mistake

--- a/yogsite/templates/donate/donation_log.html
+++ b/yogsite/templates/donate/donation_log.html
@@ -40,7 +40,7 @@
 
 								<td>
 									{% if donation.revoked %}
-										<div title="{{ donation.revoked_ckey }}" class="tag is-warning is-light has-text-centered">Revoked</div>
+										<div title="{{ donation.revoked_ckey }}" class="tag is-warning is-medium is-light has-text-centered">Revoked</div>
 									{% else %}
 										{% if donation.valid %}
 											<div class="tag is-success is-medium has-text-centered">Valid</div>
