--- a/yogsite/templates/bans/macros.html
+++ b/yogsite/templates/bans/macros.html
@@ -14,7 +14,6 @@
 				<th width="150px">Expire Date</th>
 				<th>Admin</th>
 				<th>Status</th>
-				<th>Unbanner</th>
 				<th>Tools</th>
 			</tr>
 		</thead>
@@ -46,15 +45,19 @@
 
 					<td>
 						{% if ban.unbanned_datetime %}
-							<div class="tag is-success is-medium has-text-centered">Revoked</div>
+							<div class="tag is-success is-medium has-text-centered">
+								{% if ban.unbanned_ckey %}
+									<abbr title="{{ ban.unbanned_ckey }}">Revoked</abbr>
+								{% else %}
+									Revoked
+								{% endif %}								
+							</div>
 						{% elif ban.expiration_time and datetime.utcnow() > ban.expiration_time %}
 							<div class="tag is-primary is-medium has-text-centered">Expired</div>
 						{% else %}
 							<div class="tag is-danger is-medium has-text-centered">Active</div>
 						{% endif %}
 					</td>
-
-					<td>{{ ckey_link(ban.unbanned_ckey) if ban.unbanned_ckey else "N/A" }}</td>
 
 					<td>
 						{% if g.current_user.has_perms("ban.manage") %}
