top off the action log with a few things

--- a/yogsite/templates/admin/action_log.html
+++ b/yogsite/templates/admin/action_log.html
@@ -25,7 +25,7 @@
 						<th>Admin</th>
 						<th>Target</th>
 						<th>Description</th>
-						<th>Timestamp</th>
+						<th width="200px">Timestamp</th>
 					</tr>
 				</thead>
 		
