--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="/static/css/bulma-slider.min.css" />
 		
 		<script src="/static/js/jquery.min.js"></script>
-		<script src="/static/js/vue.js"></script>
+		<script src="/static/js/vue.min.js"></script>
 		
 		<script src="/static/js/main.js"></script>
 
