--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -52,7 +52,15 @@
 
 								<td>
 									<div class="buttons">
-										<a class="button" href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}" target="_blank">Replay</a>
+										<a class="button"
+											{% if round.in_progress() %}
+												href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}?send_credentials=1"
+											{% else %}
+												href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}"
+											{% endif %}
+											target="_blank">
+											Replay
+										</a>
 										{% if g.current_user.has_perms("round.logs") %}
 											<a class="button" href="/rounds/{{ round.id }}/logs">Logs</a>
 										{% endif %}
