--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -54,7 +54,7 @@
 									<div class="buttons">
 										<a class="button"
 											{% if round.in_progress() %}
-												href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}?send_credentials=1"
+												href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}&send_credentials=1"
 											{% else %}
 												href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}"
 											{% endif %}
