--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -44,9 +44,9 @@
 									<td>In Progress</td>
 								{% endif %}
 
-								<td><a href="?query={{ round.game_mode }}" class="tag is-medium is-primary">{{ round.game_mode }}</a></td>
+								<td><a href="?query={{ round.game_mode | quote_plus }}" class="tag is-medium is-primary">{{ round.game_mode }}</a></td>
 
-								<td><a href="?query={{ round.map_name }}" class="tag is-medium is-info">{{ round.map_name }}</a></td>
+								<td><a href="?query={{ round.map_name | quote_plus }}" class="tag is-medium is-info">{{ round.map_name }}</a></td>
 
 								<td>{{ round.station_name }}</td>
 
