--- a/yogsite/templates/util/macros.html
+++ b/yogsite/templates/util/macros.html
@@ -12,33 +12,33 @@
 		{% endif %}
 
 		{% if current_page > 1 %}
-			<a class="pagination-previous" href="?page={{ current_page - 1 }}">Previous</a>
+			<a class="pagination-previous" href="{{ modify_query(page=current_page-1) }}">Previous</a>
 		{% endif %}
 
 		{% if current_page < page_count %}
-			<a class="pagination-next" href="?page={{ current_page + 1 }}">Next</a>
+			<a class="pagination-next" href="{{ modify_query(page=current_page+1) }}">Next</a>
 		{% endif %}
 
 		<ul class="pagination-list">
-			<li><a class="pagination-link  {% if current_page == 1 %}is-current{% endif %}"  href="?page=1">1</a></li>
+			<li><a class="pagination-link  {% if current_page == 1 %}is-current{% endif %}"  href="{{ modify_query(page=1) }}">1</a></li>
 
 			<li><span class="pagination-ellipsis">&hellip;</span></li>
 
 			{% if center_page - 1 > 1 and center_page -1 < page_count %}
-				<li><a class="pagination-link {% if current_page == center_page - 1 %}is-current{% endif %}" href="?page={{ center_page - 1 }}">{{ center_page - 1 }}</a></li>
+				<li><a class="pagination-link {% if current_page == center_page - 1 %}is-current{% endif %}" href="{{ modify_query(page=center_page-1) }}">{{ center_page - 1 }}</a></li>
 			{% endif %}
 
 			{% if center_page > 1 and center_page < page_count %}
-			<li><a class="pagination-link {% if current_page == center_page %}is-current{% endif %}" href="?page={{ center_page }}">{{ center_page }}</a></li>
+			<li><a class="pagination-link {% if current_page == center_page %}is-current{% endif %}" href="{{ modify_query(page=center_page) }}">{{ center_page }}</a></li>
 			{% endif %}
 
 			{% if center_page + 1 > 1 and center_page + 1 < page_count %}
-				<li><a class="pagination-link {% if current_page == center_page + 1 %}is-current{% endif %}" href="?page={{ center_page + 1 }}">{{ center_page + 1}}</a></li>
+				<li><a class="pagination-link {% if current_page == center_page + 1 %}is-current{% endif %}" href="{{ modify_query(page=center_page+1) }}">{{ center_page + 1}}</a></li>
 			{% endif %}
 
 			<li><span class="pagination-ellipsis">&hellip;</span></li>
 
-		<li><a class="pagination-link {% if current_page == page_count %}is-current{% endif %}" href="?page={{ page_count }}">{{ page_count }}</a></li>
+		<li><a class="pagination-link {% if current_page == page_count %}is-current{% endif %}" href="{{ modify_query(page=page_count) }}">{{ page_count }}</a></li>
 		</ul>
 	</nav>
 {% endmacro %}
