--- a/yogsite/static/css/main.css
+++ b/yogsite/static/css/main.css
@@ -21,3 +21,7 @@ input[type=range].slider::-webkit-slider-runnable-track {
 .fixed-table {
 	table-layout: fixed;
 }
+
+input[readonly] {
+	cursor: not-allowed;
+}
