--- a/yogsite/templates/directory/macros.html
+++ b/yogsite/templates/directory/macros.html
@@ -24,7 +24,16 @@
 					{% endif %}
 
 					<td>
-						<div class="tag is-medium is-primary">{{ note.type }}</div>
+						<div class="tags">
+							<div class="tag is-medium is-primary">
+								{{ note.type }}
+							</div>
+							{% if note.secret %}
+								<div class="tag is-medium is-danger">
+									<i class="fas fa-eye-slash" title="Secret"></i>
+								</div>
+							{% endif %}
+						</div>
 					</td>
 
 					<td>
