--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -51,7 +51,7 @@
 										{% if round.game_mode %}
 											href="?query={{ round.game_mode | quote_plus }}"
 										{% endif %}
-										class="tag is-medium is-primary">{{ round.game_mode }}
+										class="tag is-medium is-primary">{{ round.game_mode.title() }}
 									</a>
 								</td>
 
@@ -60,7 +60,7 @@
 										{% if round.map_name %}
 											href="?query={{ round.map_name | quote_plus }}"
 										{% endif %}
-										class="tag is-medium is-primary">{{ round.map_name }}
+										class="tag is-medium is-primary">{{ round.map_name.title() }}
 									</a>
 								</td>
 
