Fixes voice announcement buttons because they broken for some reason

--- a/yogsite/templates/voice_announce/voice_announce.html
+++ b/yogsite/templates/voice_announce/voice_announce.html
@@ -20,7 +20,7 @@
 					<div class="control">
 						<div class="columns">
 							<div class='column'>
-								<button class="button is-link is-pulled-left" id="va-button-record">Record</button>
+								<button class="button is-link is-pulled-left" id="va-button-record" onclick="record_button()">Record</button>
 							</div>
 							<div class='column is-hidden va-record-show' id='va-time'>
 
@@ -35,7 +35,7 @@
 					<div class="control">
 						<div class="columns">
 							<div class='column'>
-								<button class="button is-link is-pulled-left is-hidden" id="va-button-announce">Confirm Announcement</button>
+								<button class="button is-link is-pulled-left is-hidden" id="va-button-announce" onclick="upload_button()">Confirm Announcement</button>
 							</div>
 							<div class='column'>
 								<audio id='va-preview' class='is-hidden' controls></audio>
