--- a/yogsite/templates/voice_announce/voice_announce.html
+++ b/yogsite/templates/voice_announce/voice_announce.html
@@ -43,6 +43,7 @@
 						</div>
 					</div>
 				</div>
+				<p><i>By using this service you consent to your voice being broadcast on our game server and it being used at a later date for sharing purposes and or public galleries. You can request your voice be removed from this gallery.</i></p>
 			</div>
 		</div>
 	</div>
