--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -86,6 +86,7 @@
 												target="_blank">
 												Sounds
 											</a>
+										{% endif %}
 									</div>
 								</td>
 							</tr>
