--- a/yogsite/templates/admin/loa_manager.html
+++ b/yogsite/templates/admin/loa_manager.html
@@ -60,7 +60,7 @@
 							<th>Start Date</th>
 							<th>Expiry Date</th>
 							<th>Reason</th>
-							<th>Revoked</th>
+							<th>Status</th>
 							<th>Tools</th>
 						</tr>
 					</thead>
