--- a/yogsite/templates/admin/loa_manager.html
+++ b/yogsite/templates/admin/loa_manager.html
@@ -82,7 +82,7 @@
 								<td>
 									{% if loa.revoked %}
 									<div class="tag is-primary is-medium has-text-centered">Revoked</div>
-									{% elif datetime.utcnow() > loa.expiry_time %}
+									{% elif datetime.utcnow().date() > loa.expiry_time %}
 									<div class="tag is-primary is-medium has-text-centered">Expired</div>
 									{% else %}
 									<div class="tag is-danger is-medium has-text-centered">Active</div>
