--- a/yogsite/templates/bans/macros.html
+++ b/yogsite/templates/bans/macros.html
@@ -33,7 +33,7 @@
 							{% endif %}
 						{% endif %}
 
-						<td>{ban.round_id}</td>
+						<td>{{ ban.round_id }}</td>
 
 						<td>
 							{{ abbreviate(", ".join(ban.roles.split(",")), 30) }}
