--- a/yogsite/templates/directory/macros.html
+++ b/yogsite/templates/directory/macros.html
@@ -38,7 +38,7 @@
 							</div>
 						</td>
 
-						<td>{note.round_id}</td>
+						<td>{{ note.round_id }}</td>
 
 						<td>
 							{% if note.timestamp %}
