--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -20,7 +20,7 @@
 
 			{{ pagination(page, page_count) }}
 
-			<div class="box">
+			<div class="box" style="overflow:auto">
 				<table class="table is-striped is-hoverable is-fullwidth">
 					<thead>
 						<tr>
