we can be trusted with this I promise

--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -60,7 +60,7 @@
 										{% if round.map_name %}
 											href="?query={{ round.map_name | quote_plus }}"
 										{% endif %}
-										class="tag is-medium is-primary">{{ (round.map_name or "None").title() }}
+										class="tag is-medium is-primary">{{ (round.map_name or "None") }}
 									</a>
 								</td>
 
