Sounds button no longer opens in a new tab to be consistent with the logs button

--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -82,8 +82,7 @@
 										{% endif %}
 										{% if g.current_user.has_perms("round.logs") or not round.in_progress() %}
 											<a class="button"
-												href="/rounds/{{ round.id }}/sounds"
-												target="_blank">
+												href="/rounds/{{ round.id }}/sounds">
 												Sounds
 											</a>
 										{% endif %}
