--- a/yogsite/templates/home.html
+++ b/yogsite/templates/home.html
@@ -15,6 +15,50 @@
 			<img src="/static/img/logo.png" width="75%" />
 		</div>
 
+		<h5 class="title is-5 has-text-centered">Quick Links</h5>
+		<div class="columns is-centered">
+			<div class="column is-one-third">
+				<div class="card quick-links-card">
+					<div class="card-content quick-link-content">
+						<div class="columns">
+							<div class="column is-one-quarter quick-link">
+									<a href="{{ cfg.get('links.byond') }}" class="column is-centered is-flex is-vcentered">
+										<span class="icon">
+											<i class="fas fa-globe"></i>
+										</span>BYOND
+									</a>
+							</div>
+							
+							<div class="column is-one-quarter quick-link">
+									<a href="{{ cfg.get('links.discord') }}" class="column is-centered is-flex is-vcentered">
+										<span class="icon">
+											<i class="fa-brands fa-discord"></i>
+										</span>Discord
+									</a>
+							</div>
+
+							<div class="column is-one-quarter quick-link">
+									<a href="{{ cfg.get('links.wiki') }}" class="column is-centered is-flex is-vcentered">
+										<span class="icon">
+											<i class="fas fa-book"></i>
+										</span>Wiki
+									</a>
+							</div>
+
+							<div class="column is-one-quarter quick-link">
+									<a href="{{ cfg.get('links.forums') }}" class="column is-centered is-flex is-vcentered">
+										<span class="icon">
+											<i class="fas fa-building-columns"></i>
+										</span>Forums
+									</a>
+							</div>
+
+						</div>
+					</div>			
+				</div>
+			</div>
+		</div>
+
 		<h2 class="title is-2 has-text-centered">Game Servers</h2>
 
 		<div class="columns is-centered">
